@@ -3072,3 +3072,10 @@ Tue Oct  5 14:23:51 PDT 1999
 (Raster)
 
 add dialogs to warn about zoom mode etc......
+
+-------------------------------------------------------------------------------
+
+Tue Oct  5 16:08:28 PDT 1999
+(Raster)
+
+allow tooltips for DESKBINDINGS to be displayed
